--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,30 @@
 # main links links
 main:
+  
+
+  # - title: "Talks"
+  #   url: /talks/
+
+  - title: "Research"
+    url: /Publications/ 
+
   - title: "Publications"
     url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
+    
+  - title: "Courses"
+    url: /courses/
 
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+  # - title: "Portfolio"
+  #   url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  # - title: "Blog Posts"
+  #   url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
+  - title: "Resume"
+    url: /resume/
     
-  - title: "Guide"
-    url: /markdown/
+  # - title: "Guide"
+  #   url: /markdown/
