--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Home"
 title_separator          : "-"
 name                     : &name "Danesh Morales Hashemi"
 description              : &description "Mathematical Physics Student at the University of Waterloo"
-url                      : https://daneshmorales.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://daneshmorales.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "DaneshMorales/daneshmorales.github.io"
 
