--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
   #   url: /talks/
 
   - title: "Research"
-    url: /Publications/ 
+    url: /research/ 
 
   - title: "Publications"
     url: /publications/
