--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,7 +24,7 @@ main:
   #   url: /year-archive/
     
   - title: "Resume"
-    url: /resume/
+    url: /files/DaneshCV.pdf
     
   # - title: "Guide"
   #   url: /markdown/
