--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "DaneshMorales/daneshmorales.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "bio-photo.png"
   name             : "Danesh Morales Hashemi"
   pronouns         : # example: "she/her"  
   bio              : "Mathematical Physics Student at the University of Waterloo"
