--- a/_config.yml
+++ b/_config.yml
@@ -283,7 +283,7 @@ permalink: /:categories/:title/
 # paginate_path: /page:num/
 timezone: America/Los_Angeles # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
-remote_theme: jekyll/minima
+remote_theme: pages-themes/slate@v0.2.0
 
 # Plugins
 plugins:
