--- a/_config.yml
+++ b/_config.yml
@@ -284,7 +284,7 @@ permalink: /:categories/:title/
 timezone: America/Los_Angeles # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 remote_theme: pages-themes/slate@v0.2.0
-
+theme: jekyll-theme-slate
 # Plugins
 plugins:
   - jekyll-paginate
