--- a/_config.yml
+++ b/_config.yml
@@ -283,8 +283,9 @@ permalink: /:categories/:title/
 # paginate_path: /page:num/
 timezone: America/Los_Angeles # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
-remote_theme: pages-themes/slate@v0.2.0
-theme: jekyll-theme-slate
+theme: minimal-mistakes-jekyll
+minimal_mistakes_skin: "dirt" # "default" "air", "aqua", "contrast", "dark", dirt", "neon", "mint", "plum", "sunrise"
+
 # Plugins
 plugins:
   - jekyll-paginate
