--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
   
 
-  # - title: "Talks"
-  #   url: /talks/
+  - title: "Blog"
+    url: /blog_posts/
 
   - title: "Research"
     url: /research/ 
