--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Danesh's Personal Website"
 title_separator          : "-"
 name                     : &name "Danesh Morales Hashemi"
-description              : &description "Mathematical Physics Student at the University of Waterloo"
+description              : &description "Master of Applied Mathematics Student at the University of Waterloo"
 url                      : https://daneshmorales.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "DaneshMorales/daneshmorales.github.io"
