--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "biopic.png"
   name             : "Danesh Morales Hashemi"
   pronouns         : # example: "she/her"  
-  bio              : "Mathematical Physics Student at the University of Waterloo"
+  bio              : "Master of Applied Mathematics Student at the University of Waterloo"
   location         : "Waterloo, ON, Canada"
   employer         : "University of Waterloo"
   uri              : # URL
