--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,9 @@ url                      : https://daneshmorales.github.io # the base hostname &
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "DaneshMorales/daneshmorales.github.io"
 
+site_theme: dark
+
+
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
